--- a/client_a/package.json
+++ b/client_a/package.json
@@ -14,8 +14,11 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-validation": "^3.0.7",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "validator": "^13.6.0"
   },
   "scripts": {
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.9"
   }
 }
